# csc6052-final-long-horizon-swe-eval

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
benchmark/: __init__.py  project_1.py  project_2.py  project_3.py  project_4.py  project_5.py  results-management.md  templates.py
benchmark/harness/: __init__.py  common.py  cost.py  evaluate_repo.py  metrics.py  prepare_stage_workspace.py  run_experiment.py  run_managed_trajectory.py  run_stage.py  run_trajectory.py
benchmark/scripts/: proxy-env.sh  run_stage_claude.sh  run_stage_codex.sh  run_stage_mini.sh
docker/agents/claude/: Dockerfile  entrypoint.sh
docker/agents/codex/: Dockerfile  config.toml  entrypoint.sh
docker/evaluator/: Dockerfile
evaluation/: __init__.py
evaluation/project_1/: __init__.py  common.py  conftest.py
evaluation/project_2/: __init__.py  common.py  conftest.py
evaluation/project_3/: __init__.py  common.py  conftest.py
evaluation/project_4/: __init__.py  common.py  conftest.py
evaluation/project_5/: __init__.py  common.py  conftest.py
scripts/claude/: go.sh
scripts/codex/: go.sh
scripts/managed/: claude.sh  default.sh  go.sh  mini-swe-ds.sh
scripts/mini-swe/: go.sh  resume.sh
tasks/project-1/: Dockerfile
tasks/project-4/: Dockerfile
tests/: test_agent_image_contract.py  test_claude_entrypoint.py  test_codex_entrypoint.py  test_cost_harness.py  test_evaluate_repo_harness.py  test_managed_go_script.py  test_managed_run_harness.py  test_metrics.py  test_mini_entrypoint.py  test_run_experiment.py  test_template_registry.py
(+109 files in other folders)
